--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "1.9.3",
     "localforage": "1.10.0",
     "match-sorter": "6.3.1",
+    "node-fetch": "^2.6.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "8.0.5",
