--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "@reduxjs/toolkit": "1.9.3",
     "localforage": "1.10.0",
     "match-sorter": "6.3.1",
+    "mongodb": "5.1",
     "node-fetch": "^2.6.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "8.0.5",
     "react-router-dom": "^6.9.0",
-    "sort-by": "^1.2.0"
+    "sort-by": "^0.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
